--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       # Run the POSTMAN collection
       - name: Run POSTMAN collection
         run: |
-          newman run petstore.collection.json -r htmlextra --reporter-htmlextra-export testResults/htmlreport.html 
+          newman run petstore.collection.json -r htmlextra --reporter-htmlextra-export testResults/index.html 
           # --reporter-htmlextra-darkTheme  > testResults/runreport1.html
 
 
